# CMake_SFML_Project_template

./: .gitignore  CMakeLists.txt  main.cpp
